# dockerfile-kernel

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  COPYING.md  LICENSE.md  README.md  RELEASE.md  Untitled.ipynb  install.json  package.json  pyproject.toml  setup.cfg  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  pypi.yml
docker_export/: LICENSE.md  setup.py
docker_export/docker_export/: __init__.py
docker_export/docker_export/templates/: docker_template.tpl
docker_extension/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json
docker_extension/.github/workflows/: build.yml  check-release.yml
docker_extension/docker_extension/: __init__.py
docker_extension/export/: setup.py
docker_extension/export/docker_export/: __init__.py
docker_extension/schema/: plugin.json
docker_extension/src/: index.ts
docker_extension/src/build_context/: index.ts
docker_extension/src/helper/: Untitled.ipynb  index.ts
docker_extension/src/import/: index.ts
docker_extension/src/shell/: index.ts
docker_kernel/: __init__.py  __main__.py  depreciated_magics.py  install.py  kernel.py  magic.py  magics.py
docker_kernel/frontend/: interaction.py
docker_kernel/magics/: __init__.py  arg.py  context.py  install.py  magic.py  magics.py  random.py  random_int.py  stages.py  tag.py
docker_kernel/magics/helper/: errors.py  types.py
docker_kernel/tmp/: Install.ipynb  Untitled.ipynb
docker_kernel/utils/: conversion.py  dockerignore.py  filesystem.py  notebook.py
dockerfile_kernel/: __init__.py  __main__.py  install.py  kernel.py
dockerfile_kernel/export/: __init__.py
dockerfile_kernel/frontend/: interaction.py
dockerfile_kernel/magics/: arg.py  context.py  install.py  magic.py  magics.py  stages.py  tag.py
dockerfile_kernel/magics/helper/: __init__.py  errors.py  types.py
dockerfile_kernel/tmp/: Install.ipynb
dockerfile_kernel/utils/: conversion.py  dockerignore.py  filesystem.py  notebook.py
docs/: README.md  conf.py  docstring.rst  index.rst
docs/_templates/: custom-class-template.rst
docs/docstring/: index.rst  kernel.rst
docs/features/: index.rst
helper_extension/: .copier-answers.yml  .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package.json  pyproject.toml
helper_extension/helper_extension/: __init__.py
helper_extension/src/: index.ts
import_extension/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml
import_extension/import_extension/: __init__.py
import_extension/src/: index.ts
presentation/marco/: ARG.ipynb  Install.ipynb
presentation/marvin/: exp.ipynb  shell.ipynb
presentation/shuangshuang/: Multi_Stage.ipynb  tag.ipynb
schema/: plugin.json
shell_extension/: .copier-answers.yml  .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml
shell_extension/shell_extension/: __init__.py
shell_extension/src/: index.ts
shell_extension/ui-tests/: package.json
src/: index.ts
src/import/: index.ts  types.ts
src/shell/: index.ts
test/: image_ids.py  test_image_ids.py  test_magics.py  utils.py
test/dockerfiles/: 2.Dockerfile  Test.ipynb
(+66 files in other folders)
