[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "dockerfile_kernel"
version = "0.1.0"
authors = [
    {name="Dominic Kempf", email="dominic.kempf@iwr.uni-heidelberg.de"},
    {name="Marvin Weitz"},
    {name="Marco Lorenz"},
    {name="Shuangshuang Li"},
]
description = "A Jupyter kernel that interprets Dockerfiles"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_server>=2.0.1,<3",
    "docker",
    "ipykernel",
    "IPython",
    "jupyter_client",
    "ipylab",
    "prettytable",
]

[project.entry-points."nbconvert.exporters"]
dockerfile = "dockerfile_kernel.export.__init__:DockerExporter"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.targets.sdist]
artifacts = ["dockerfile_kernel/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"dockerfile_kernel/labextension" = "share/jupyter/labextensions/dockerfile_kernel"
"install.json" = "share/jupyter/labextensions/dockerfile_kernel/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "dockerfile_kernel/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "dockerfile_kernel/labextension/static/style.js",
    "dockerfile_kernel/labextension/package.json",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "dockerfile_kernel/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
