[metadata]
name = docker_kernel
version = attr: docker_kernel.kernel.__version__
description = A Jupyter Kernel for Dockerfiles
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    docker
    ipykernel
    IPython
    jupyter_client
    ipylab
    prettytable
